Fix datepicker img alignment

--- a/webapp/WEB-INF/base/emfrontend2/theme/styles/theme.css
+++ b/webapp/WEB-INF/base/emfrontend2/theme/styles/theme.css
@@ -2950,7 +2950,7 @@ a.collectionbox.favorite
     text-decoration: underline;
 }
 
-
-
-
-
+.ui-datepicker-trigger {
+	margin-left:10px;
+	padding-bottom:3px;
+}
